--- a/index.html
+++ b/index.html
@@ -1,412 +1,27 @@
 <!DOCTYPE html>
 <html lang="vi">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quản Lý Khóa Học</title>
-    <style>
-      html,
-      body {
-        height: 100%;
-        margin: 0;
-      }
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #ade6bf;
-        background-image: url("https://24hstore.vn/upload_images/images/hinh-nen-may-tinh/hinh_nen_thien_nhien_(2).jpg");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-      }
-      h1 {
-        text-align: center;
-        color: #333;
-      }
-      .container {
-        max-width: 800px;
-        width: 100%;
-        margin: 20px auto;
-        background-color: rgba(255, 255, 255, 0.8);
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
-      table {
-        width: 100%;
-        border-collapse: collapse;
-        margin-bottom: 20px;
-      }
-      table,
-      th,
-      td {
-        border: 1px solid #ddd;
-      }
-      th,
-      td {
-        padding: 10px;
-        text-align: left;
-      }
-      th {
-        background-color: #f4f4f4;
-      }
-      button {
-        background-color: #4caf50;
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        cursor: pointer;
-        border-radius: 5px;
-        margin-top: 10px;
-      }
-      button:hover {
-        background-color: #45a049;
-      }
-      .form-group {
-        margin-bottom: 15px;
-      }
-      .form-group label {
-        display: block;
-        margin-bottom: 5px;
-      }
-      .form-group input,
-      .form-group select,
-      .form-group textarea {
-        width: 100%;
-        padding: 8px;
-        box-sizing: border-box;
-      }
-      .form-group textarea {
-        resize: vertical;
-      }
-
-      /* Menu Điều Hướng */
-      .topnav {
-        overflow: hidden;
-        background-color: #333;
-        display: flex;
-        justify-content: center;
-        padding: 14px;
-      }
-      .topnav a {
-        float: left;
-        display: block;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-      }
-      .topnav a:hover {
-        background-color: #ddd;
-        color: black;
-      }
-      .topnav a.active {
-        background-color: #4caf50;
-        color: white;
-      }
-
-      @media screen and (max-width: 600px) {
-        .topnav a {
-          display: block;
-          text-align: center;
-          width: 100%;
-        }
-      }
-
-      /* Tab Menu */
-      .tab {
-        display: flex;
-        cursor: pointer;
-        padding: 5px 10px; /* Điều chỉnh kích thước tab */
-        background-color: #f1f1f1;
-        border: 1px solid #ccc;
-        margin: 10px 5px; /* Điều chỉnh khoảng cách giữa các tab */
-        border-radius: 5px;
-        font-size: 14px; /* Kích thước phông chữ nhỏ hơn */
-      }
-      .tab.active {
-        background-color: #4caf50;
-        color: white;
-      }
-
-      /* Ẩn các phần không được chọn */
-      .section {
-        display: none;
-      }
-    </style>
-  </head>
-  <body>
+    <link rel="stylesheet" href="styles.css"> <!-- Nếu có CSS riêng -->
+</head>
+<body>
     <!-- Menu Điều Hướng -->
     <div class="topnav">
-      <a class="active" href="javascript:void(0);" onclick="showSection('home')"
-        >Home</a
-      >
-      <a href="javascript:void(0);" onclick="showSection('about')">About</a>
-      <a href="javascript:void(0);" onclick="showSection('lab')">Lab</a>
+        <a class="active" href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="lab.html">Lab</a>
     </div>
 
     <!-- Phần nội dung Home -->
     <div id="home" class="section" style="display: block">
-      <div class="container">
-        <h1>Trang chủ</h1>
-        <p>Chào mừng bạn đến với website của tôi.</p>
-      </div>
-    </div>
-
-    <!-- Phần nội dung About -->
-    <div id="about" class="section">
-      <div class="container">
-        <h1>Giới Thiệu</h1>
-        <h2>CV Giới Thiệu Bản Thân</h2>
-        <p><strong>Tên:</strong> Nguyễn Đình Tiến</p>
-        <p><strong>Tuổi:</strong> 19</p>
-        <p><strong>Email:</strong> 23130330@st.hcmuaf.edu.vn</p>
-        <p>
-          <strong>Mô Tả:</strong> Tôi là một sinh viên lập trình viên yêu thích
-          công nghệ và luôn tìm kiếm những cách mới để phát triển kỹ năng của
-          mình.
-        </p>
-      </div>
-    </div>
-
-    <!-- Phần nội dung Lab -->
-    <div id="lab" class="section">
-      <div class="container">
-        <h1>Lab</h1>
-        <p>Chọn một lab bên dưới để xem chi tiết.</p>
-        <div class="tab active" onclick="showLab('lab1', this)">Lab1</div>
-        <div class="tab" onclick="showLab('lab2', this)">Lab2</div>
-        <div class="tab" onclick="showLab('lab3', this)">Lab3</div>
-      </div>
-    </div>
-
-    <!-- Phần nội dung Lab1 với Quản lý khóa học -->
-    <div id="lab1" class="section">
-      <div class="container">
-        <h1>Lab1 - Quản Lý Khóa Học</h1>
-
-        <!-- Danh sách khóa học -->
-        <h2>Danh Sách Khóa Học</h2>
-        <table>
-          <thead>
-            <tr>
-              <th>ID Khóa Học</th>
-              <th>Tên Khóa Học</th>
-              <th>Giảng Viên</th>
-              <th>Ngày Tạo</th>
-              <th>Hành Động</th>
-            </tr>
-          </thead>
-          <tbody id="course-list-1">
-            <!-- Các dòng khóa học sẽ được thêm vào đây -->
-          </tbody>
-        </table>
-        <button onclick="showCourseForm('lab1')">Thêm Khóa Học Mới</button>
-
-        <!-- Form Thêm/Chỉnh sửa Khóa Học -->
-        <div
-          id="course-form-1"
-          class="course-form"
-          style="display: none; margin-top: 20px"
-        >
-          <h2 id="form-title-1">Thêm Khóa Học</h2>
-          <div class="form-group">
-            <label for="course-name-1">Tên Khóa Học</label>
-            <input
-              type="text"
-              id="course-name-1"
-              placeholder="Nhập tên khóa học"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <label for="course-description-1">Mô Tả Khóa Học</label>
-            <textarea
-              id="course-description-1"
-              rows="4"
-              placeholder="Nhập mô tả khóa học"
-            ></textarea>
-          </div>
-          <div class="form-group">
-            <label for="course-instructor-1">Giảng Viên</label>
-            <select id="course-instructor-1">
-              <option value="1">Nguyễn Văn A</option>
-              <option value="2">Trần Thị B</option>
-              <option value="3">Lê Văn C</option>
-            </select>
-          </div>
-          <button onclick="saveCourse('lab1')">Lưu Khóa Học</button>
-          <button onclick="cancelCourse('lab1')">Hủy</button>
+        <div class="container">
+            <h1>Trang chủ</h1>
+            <p>Chào mừng bạn đến với website của tôi.</p>
         </div>
-      </div>
     </div>
 
-    <!-- Phần nội dung Lab2 -->
-    <div id="lab2" class="section">
-      <div class="container">
-        <h1>Lab2</h1>
-        <p>Phần nội dung cho Lab2 sẽ được cập nhật sau.</p>
-      </div>
-    </div>
-
-    <!-- Phần nội dung Lab3 -->
-    <div id="lab3" class="section">
-      <div class="container">
-        <h1>Lab3</h1>
-        <p>Phần nội dung cho Lab3 sẽ được cập nhật sau.</p>
-      </div>
-    </div>
-
-    <script>
-      let courses1 = [];
-      let isEditing = false;
-      let editingIndex = -1;
-
-      function showSection(section) {
-        const sections = document.querySelectorAll(".section");
-        sections.forEach((s) => {
-          s.style.display = s.id === section ? "block" : "none";
-        });
-      }
-
-      function showLab(lab, tab) {
-        const labs = ["lab1", "lab2", "lab3"];
-        labs.forEach((l) => {
-          document.getElementById(l).style.display =
-            l === lab ? "block" : "none";
-        });
-
-        const tabs = document.querySelectorAll(".tab");
-        tabs.forEach((t) => {
-          t.classList.remove("active");
-        });
-        tab.classList.add("active");
-
-        // Ẩn nội dung Lab1 khi quay lại Home
-        if (lab !== "lab1") {
-          document.getElementById("lab1").style.display = "none";
-        }
-      }
-
-      function showCourseForm(lab) {
-        document.getElementById(
-          `course-form-${lab.charAt(lab.length - 1)}`
-        ).style.display = "block";
-        document.getElementById(
-          `form-title-${lab.charAt(lab.length - 1)}`
-        ).innerText = "Thêm Khóa Học";
-        resetForm(lab);
-      }
-
-      function cancelCourse(lab) {
-        document.getElementById(
-          `course-form-${lab.charAt(lab.length - 1)}`
-        ).style.display = "none";
-        resetForm(lab);
-      }
-
-      function resetForm(lab) {
-        document.getElementById(
-          `course-name-${lab.charAt(lab.length - 1)}`
-        ).value = "";
-        document.getElementById(
-          `course-description-${lab.charAt(lab.length - 1)}`
-        ).value = "";
-        document.getElementById(
-          `course-instructor-${lab.charAt(lab.length - 1)}`
-        ).value = "1";
-        isEditing = false;
-        editingIndex = -1;
-      }
-
-      function saveCourse(lab) {
-        const name = document.getElementById(
-          `course-name-${lab.charAt(lab.length - 1)}`
-        ).value;
-        const description = document.getElementById(
-          `course-description-${lab.charAt(lab.length - 1)}`
-        ).value;
-        const instructor = document.getElementById(
-          `course-instructor-${lab.charAt(lab.length - 1)}`
-        ).value;
-
-        if (name.trim() === "") {
-          alert("Tên khóa học không được để trống!");
-          return;
-        }
-
-        if (isEditing) {
-          courses1[editingIndex] = {
-            name,
-            description,
-            instructor,
-            createdAt: courses1[editingIndex].createdAt,
-          };
-        } else {
-          const newCourse = {
-            name,
-            description,
-            instructor,
-            createdAt: new Date().toLocaleString(),
-          };
-          courses1.push(newCourse);
-        }
-
-        renderCourseList();
-        cancelCourse(lab);
-      }
-
-      function renderCourseList() {
-        const courseListId = `course-list-1`;
-        const courseList = document.getElementById(courseListId);
-        courseList.innerHTML = "";
-
-        courses1.forEach((course, index) => {
-          const row = document.createElement("tr");
-          row.innerHTML = `
-          <td>${index + 1}</td>
-          <td>${course.name}</td>
-          <td>${course.instructor}</td>
-          <td>${course.createdAt}</td>
-          <td>
-            <button onclick="editCourse(${index}, 'lab1')">Chỉnh Sửa</button>
-            <button onclick="deleteCourse(${index}, 'lab1')">Xóa</button>
-          </td>`;
-          courseList.appendChild(row);
-        });
-      }
-
-      function editCourse(index, lab) {
-        const course = courses1[index];
-        document.getElementById(
-          `course-name-${lab.charAt(lab.length - 1)}`
-        ).value = course.name;
-        document.getElementById(
-          `course-description-${lab.charAt(lab.length - 1)}`
-        ).value = course.description;
-        document.getElementById(
-          `course-instructor-${lab.charAt(lab.length - 1)}`
-        ).value = course.instructor;
-        document.getElementById(
-          `form-title-${lab.charAt(lab.length - 1)}`
-        ).innerText = "Chỉnh Sửa Khóa Học";
-        document.getElementById(
-          `course-form-${lab.charAt(lab.length - 1)}`
-        ).style.display = "block";
-        isEditing = true;
-        editingIndex = index;
-      }
-
-      function deleteCourse(index, lab) {
-        if (confirm("Bạn có chắc chắn muốn xóa khóa học này?")) {
-          courses1.splice(index, 1);
-          renderCourseList();
-        }
-      }
-    </script>
-  </body>
+    <script src="script.js"></script>
+</body>
 </html>
-
