--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quản Lý Khóa Học</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Nếu có CSS riêng -->
+    <title>Quản Lý Khóa Học - Home</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Thêm link đến file CSS -->
 </head>
 <body>
     <!-- Menu Điều Hướng -->
@@ -21,7 +21,5 @@
             <p>Chào mừng bạn đến với website của tôi.</p>
         </div>
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
