--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Giới Thiệu</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Nếu có CSS riêng -->
+    <title>Quản Lý Khóa Học - About</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Thêm link đến file CSS -->
 </head>
 <body>
     <!-- Menu Điều Hướng -->
@@ -24,15 +24,12 @@
             <p><strong>Email:</strong> 23130330@st.hcmuaf.edu.vn</p>
             <p><strong>Mô Tả:</strong> Tôi là một sinh viên lập trình viên yêu thích công nghệ và luôn tìm kiếm những cách mới để phát triển kỹ năng của mình.</p>
         </div>
+        <!-- Nút "Exit" để quay lại Home -->
+        <div style="text-align: center; margin: 20px;">
+            <a href="index.html">
+                <button>Exit</button>
+            </a>
+        </div>
     </div>
-
-    <!-- Nút "Exit" để quay lại Home -->
-    <div style="text-align: center; margin: 20px;">
-        <a href="index.html">
-            <button>Exit</button>
-        </a>
-    </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
