--- a/lab.html
+++ b/lab.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quản Lý Khóa Học - Lab</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Thêm link đến file CSS -->
+    <link rel="stylesheet" href="styles.css"> <!-- Liên kết đến file CSS -->
 </head>
 <body>
     <!-- Menu Điều Hướng -->
@@ -15,7 +15,7 @@
     </div>
 
     <!-- Phần nội dung Lab -->
-    <div id="lab" class="section">
+    <div id="lab" class="section" style="display: block">
         <div class="container">
             <h1>Lab</h1>
             <p>Chọn một lab bên dưới để xem chi tiết.</p>
@@ -25,8 +25,8 @@
         </div>
     </div>
 
-    <!-- Phần nội dung Lab1 với Quản lý khóa học -->
-    <div id="lab1" class="section">
+    <!-- Phần nội dung Lab1 -->
+    <div id="lab1" class="section" style="display: none">
         <div class="container">
             <h1>Lab1 - Quản Lý Khóa Học</h1>
             <h2>Danh Sách Khóa Học</h2>
@@ -74,6 +74,7 @@
             </a>
         </div>
     </div>
+
     <script src="lab.js"></script> <!-- Thêm link đến file JavaScript cho Lab -->
 </body>
 </html>
