--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quản Lý Khóa Học - About</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Thêm link đến file CSS -->
+    <link rel="stylesheet" href="styles.css"> <!-- Liên kết đến file CSS -->
 </head>
 <body>
     <!-- Menu Điều Hướng -->
@@ -15,7 +15,7 @@
     </div>
 
     <!-- Phần nội dung About -->
-    <div id="about" class="section">
+    <div id="about" class="section" style="display: block">
         <div class="container">
             <h1>Giới Thiệu</h1>
             <h2>CV Giới Thiệu Bản Thân</h2>
