--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <?php
     session_start();
     if (!isset($_SESSION['username'])) {
-        header("Location: login.html"); // Chuyển hướng đến trang đăng nhập
+        header("Location: login.html"); // Chuyển hướng đến trang đăng nhập nếu chưa đăng nhập
         exit();
     }
     ?>
