--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a class="active" href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="lab.html">Lab</a>
-            <a href="index.html">Đăng Nhập</a> <!-- Chuyển đến trang đăng nhập -->
+            <a href="login.html">Đăng Nhập</a> <!-- Chuyển đến trang đăng nhập -->
         </nav>
     </header>
 
@@ -46,7 +46,7 @@
         <div class="container">
             <h1>Trang chủ</h1>
             <p>Chào mừng bạn đến với website của tôi!</p>
-            <p>Để truy cập vào hệ thống, vui lòng <a href="index.html">đăng nhập</a>.</p>
+            <p>Để truy cập vào hệ thống, vui lòng <a href="login.html">đăng nhập</a>.</p>
         </div>
     </main>
 </body>
