--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a class="active" href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="lab.html">Lab</a>
-            <a href="login.html">Đăng Nhập</a> <!-- Chuyển đến trang đăng nhập -->
+            <a href="login.html">Đăng Nhập</a> <!-- Liên kết đến trang đăng nhập -->
         </nav>
     </header>
 
