--- a/index.html
+++ b/index.html
@@ -1,53 +1,20 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quản Lý Khóa Học - Home</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trang chủ</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
-        }
-        .topnav {
-            background-color: #28a745;
-            padding: 10px;
-            color: white;
-        }
-        .topnav a {
-            color: white;
-            margin: 0 15px;
-            text-decoration: none;
-        }
-        .container {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-    </style>
 </head>
 <body>
-    <!-- Menu Điều Hướng -->
-    <header class="topnav">
-        <nav>
-            <a class="active" href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="lab.html">Lab</a>
-            <a href="login.html">Đăng Nhập</a> <!-- Liên kết đến trang đăng nhập -->
-        </nav>
-    </header>
-
-    <!-- Phần nội dung Home -->
-    <main id="home" class="section">
-        <div class="container">
-            <h1>Trang chủ</h1>
-            <p>Chào mừng bạn đến với website của tôi!</p>
-            <p>Để truy cập vào hệ thống, vui lòng <a href="login.html">đăng nhập</a>.</p>
-        </div>
-    </main>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="labs.html">Labs</a></li>
+        </ul>
+    </nav>
+    <h1>Chào mừng đến với trang chủ</h1>
+    <p>Nội dung chính của trang chủ.</p>
 </body>
 </html>
