--- a/about.html
+++ b/about.html
@@ -1,35 +1,20 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quản Lý Khóa Học - About</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Liên kết đến file CSS -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Menu Điều Hướng -->
-    <div class="topnav">
-        <a href="index.html">Home</a>
-        <a class="active" href="about.html">About</a>
-        <a href="lab.html">Lab</a>
-    </div>
-
-    <!-- Phần nội dung About -->
-    <div id="about" class="section" style="display: block">
-        <div class="container">
-            <h1>Giới Thiệu</h1>
-            <h2>CV Giới Thiệu Bản Thân</h2>
-            <p><strong>Tên:</strong> Nguyễn Đình Tiến</p>
-            <p><strong>Tuổi:</strong> 19</p>
-            <p><strong>Email:</strong> 23130330@st.hcmuaf.edu.vn</p>
-            <p><strong>Mô Tả:</strong> Tôi là một sinh viên lập trình viên yêu thích công nghệ và luôn tìm kiếm những cách mới để phát triển kỹ năng của mình.</p>
-        </div>
-        <!-- Nút "Exit" để quay lại Home -->
-        <div style="text-align: center; margin: 20px;">
-            <a href="index.html">
-                <button>Exit</button>
-            </a>
-        </div>
-    </div>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="labs.html">Labs</a></li>
+        </ul>
+    </nav>
+    <h1>Về chúng tôi</h1>
+    <p>Đây là trang About.</p>
 </body>
 </html>
