--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="labs.html">Labs</a></li>
         </ul>
     </nav>
-    <h1>Chào mừng đến với trang chủ</h1>
-    <p>Nội dung chính của trang chủ.</p>
+    <div class="container">
+        <h1>Chào mừng đến với trang chủ</h1>
+        <p>Đây là nội dung chính của trang chủ.</p>
+    </div>
 </body>
 </html>
