--- a/about.html
+++ b/about.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Về chúng tôi</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="about.html" class="active">About</a></li>
             <li><a href="labs.html">Labs</a></li>
         </ul>
     </nav>
-    <h1>Về chúng tôi</h1>
-    <p>Đây là trang About.</p>
+    <div class="container">
+        <h1>Về chúng tôi</h1>
+        <p>Chúng tôi là một nhóm phát triển với mục tiêu cung cấp hệ thống quản lý khóa học chất lượng cao.</p>
+    </div>
 </body>
 </html>
