--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <nav>
         <ul>
+            <li><a href="login.html">Đăng nhập</a></li>
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="labs.html">Labs</a></li>
