--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html" class="active">About</a></li>
             <li><a href="labs.html">Labs</a></li>
+            <li><a href="login.html">Đăng nhập</a></li>
         </ul>
     </nav>
     <div class="container">
