--- a/labs.html
+++ b/labs.html
@@ -12,6 +12,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="labs.html" class="active">Labs</a></li>
+            <li><a href="login.html">Đăng nhập</a></li>
         </ul>
     </nav>
     <div class="container">
