--- a/login.html
+++ b/login.html
@@ -1,47 +1,44 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng nhập</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Đăng Nhập</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="labs.html">Labs</a></li>
-            <li><a href="login.html" class="active">Đăng nhập</a></li>
-        </ul>
-    </nav>
     <div class="container">
-        <h1>Đăng nhập</h1>
-        <form id="loginForm" onsubmit="return login();">
-            <label for="username">Tên đăng nhập:</label>
-            <input type="text" id="username" required>
-            <br>
-            <label for="password">Mật khẩu:</label>
-            <input type="password" id="password" required>
-            <br>
-            <button type="submit">Đăng nhập</button>
-        </form>
+        <!-- Màn hình đăng nhập -->
+        <div class="login-container">
+            <h1>Đăng Nhập</h1>
+            <form id="loginForm" onsubmit="return login()">
+                <label for="username">Tên đăng nhập/Email:</label>
+                <input type="text" id="username" name="username" required />
+
+                <label for="password">Mật khẩu:</label>
+                <input type="password" id="password" name="password" required />
+
+                <button type="submit">Đăng Nhập</button>
+                <a href="#" class="forgot-password">Quên mật khẩu?</a>
+            </form>
+        </div>
     </div>
+
     <script>
         function login() {
-            // Lấy giá trị từ các trường nhập
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
-            // Kiểm tra thông tin đăng nhập (ở đây chỉ là ví dụ)
+            // Giả sử người dùng đăng nhập thành công với thông tin này
             if (username === 'admin' && password === '123456') {
-                // Chuyển hướng đến trang chủ nếu đăng nhập thành công
+                // Lưu trạng thái đăng nhập
+                localStorage.setItem('loggedIn', true);
+                // Chuyển hướng đến trang chính sau khi đăng nhập
                 window.location.href = 'index.html';
-                return false; // Ngăn chặn gửi form
             } else {
                 alert('Tên đăng nhập hoặc mật khẩu không đúng.');
-                return false; // Ngăn chặn gửi form
             }
+            return false; // Ngăn chặn việc gửi form
         }
     </script>
 </body>
